add docker support

--- a/BiogenomTestResults/appsettings.Development.json
+++ b/BiogenomTestResults/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=1578;Database=bopgenomdb;Username=biogenomuser;Password=biogenompassword"
   }
 }
